The viewer is able to rotate icons as the nodes directions change